# cfa-simulator

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  package.json  plz.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/actions/setup-plz/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  crates.yml  deploy.yml  npm.yml  pypi-cli.yml  pypi.yml  update-latest.yml
cfasim/: Cargo.toml  docs.spec.ts  init.spec.ts  new.spec.ts  playwright.config.ts
cfasim-model/: Cargo.toml
cfasim-model-py/: pyproject.toml
cfasim-model-py/src/cfasim_model/: __init__.py
cfasim-model/src/: lib.rs
cfasim-ui/cfasim-ui/: package.json
cfasim-ui/cfasim-ui/src/: charts.ts  components.ts  pyodide-vite.js  pyodide.ts  shared.ts  wasm-vite.ts  wasm.ts
cfasim-ui/cfasim-ui/src/theme/: base.css  cdc.css  cfasim.css  index.js  theme.css  utilities.css
cfasim-ui/charts/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
cfasim-ui/charts/src/: LineChart.md  LineChart.vue  index.ts  tooltip-position.ts
cfasim-ui/charts/src/ChartMenu/: ChartMenu.vue  download.ts
cfasim-ui/components/: package.json  vite.config.ts  vitest.config.ts
cfasim-ui/components/src/: Box.md  Box.spec.ts  Button.md  Button.spec.ts  Button.test.ts  Expander.md  Hint.md  Hint.spec.ts  Hint.vue  Icon.md  Icon.spec.ts  NumberInput.md  NumberInput.vue  SelectBox.md  SelectBox.test.ts  SelectBox.vue  SidebarLayout.vue  Spinner.md  TextInput.md  TextInput.test.ts  TextInput.vue  Toggle.md  Toggle.spec.ts  Toggle.test.ts  Toggle.vue  index.ts
cfasim-ui/docs/: drift.test.ts  package.json
cfasim-ui/pyodide/: package.json
cfasim-ui/pyodide/src/: index.ts  pyodide.worker.ts  pyodideWorkerApi.ts  useModel.ts  vitePlugin.js  vitePlugin.ts
cfasim-ui/shared/: package.json
cfasim-ui/shared/src/: ModelOutput.test.ts  ModelOutput.ts  csv.ts  index.ts  transferUtils.ts  useUrlParams.test.ts  useUrlParams.ts
cfasim-ui/theme/: package.json
cfasim-ui/theme/src/: all.js  base.css  spacing.css  theme.css  utilities.css
cfasim-ui/wasm/: package.json
cfasim-ui/wasm/src/: index.ts  useModel.ts  vitePlugin.js  vitePlugin.ts  wasm.worker.ts  wasmWorkerApi.ts
cfasim/src/: docs.rs  init.rs  main.rs  new.rs  proc.rs  project.rs  run.rs  settings.rs  test.rs  tools.rs  update.rs  update_check.rs
cfasim/src/templates/: index.html  package.json  tsconfig.json
cfasim/src/templates/python/: .gitignore  AGENTS.md  App.vue  app.spec.ts  package.json  playwright.config.ts  pyproject.toml  vite.config.ts
cfasim/src/templates/python/interactive/: vite.config.ts
cfasim/src/templates/python/interactive/src/: App.vue
cfasim/src/templates/python/model/: pyproject.toml
cfasim/src/templates/python/src/: App.vue  main.ts
cfasim/src/templates/python/src/%%module_name%%/: __init__.py
cfasim/src/templates/python/tests/: test_model.py
cfasim/src/templates/rust/: .gitignore  AGENTS.md  App.vue  index.html  package.json  playwright.config.ts  playwright.setup.ts  tsconfig.json  vite.config.ts
cfasim/src/templates/rust/interactive/: app.spec.ts  vite.config.ts
cfasim/src/templates/rust/interactive/src/: App.vue
cfasim/src/templates/rust/model/: Cargo.toml
cfasim/src/templates/rust/model/src/: lib.rs
cfasim/src/templates/rust/src/: App.vue  lib.rs
docs/: getting-started.md  index.md  package.json  playwright.config.ts
docs/.vitepress/: config.ts
docs/.vitepress/theme/: ComponentDemo.vue  InstallBox.vue  demo-theme.css  index.ts
docs/cfasim-ui/: components.spec.ts  index.md  pyodide.md  shared.md  theme.md  wasm.md
docs/demos/sidebar-layout/: App.vue  index.html  main.ts  vite.config.ts
docs/demos/sidebar-tabs/: App.vue  index.html  main.ts  vite.config.ts
docs/guide/: python.md  rust.md
examples/fetch-example/: fetch-example.spec.ts  index.html  package.json  playwright.config.ts
examples/fetch-example/src/: App.vue
examples/python-example/: index.html  package.json  playwright.config.ts  python-example.spec.ts  vite.config.ts
examples/python-example/model/: pyproject.toml
examples/python-example/src/: App.vue  env.d.ts
examples/rust-example/: index.html  package.json  playwright.config.ts  rust-example.spec.ts  vite.config.ts
examples/rust-example/model/: Cargo.toml
examples/rust-example/src/: App.vue  main.ts
models/: index.html  models.spec.ts  package.json  playwright.config.ts  vite.config.ts
models/src/: App.vue  Home.vue  main.ts  router.ts
models/src/fetch-example/: Page.vue
models/src/python-example/: Page.vue
models/src/reed-frost/: Page.vue
models/src/reed-frost/model/: Cargo.toml
models/src/reed-frost/model/src/: lib.rs
scripts/: check-bundle-size.mjs  fetch_nssp_ed.py  generate_docs.mjs  version.mjs
(+59 files in other folders)
