[workspace]
members = ["cfasim", "cfasim-model"]
exclude = ["models/src/reed-frost/model"]
resolver = "2"

[workspace.package]
rust-version = "1.80"

# Minimum versions of tooling checked by `cfasim tools`.
# Kept here so bumps sit next to rust-version for contributors to find.
[workspace.metadata.cfasim]
wasm-pack-min = "0.13"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
