[package]
name = "cfasim"
version = "0.3.2"
edition = "2021"
description = "CLI for scaffolding interactive simulations using Python, Rust, and WebAssembly"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
include_dir = "0.7"
ureq = "3"
flate2 = "1"
tar = "0.4"
