[package]
name = "cfasim"
version = "0.3.7"
edition = "2021"
description = "CLI for scaffolding interactive simulations using Python, Rust, and WebAssembly"
license = "Apache-2.0"
repository = "https://github.com/CDCgov/cfa-simulator"

[dependencies]
anyhow = "1"
axoupdater = { version = "0.10.0", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
flate2 = "1"
home = "0.5"
include_dir = "0.7"
is_ci = "1"
pollster = "0.4"
semver = "1"
tar = "0.4"
toml_edit = "0.22"
ureq = "3"

[dev-dependencies]
tempfile = "3"
