[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "%%module_name%%"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["cfasim-model"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# target-version is inferred from project.requires-python
