[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cfasim-model = { path = "../../../../cfasim-model" }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.5", default-features = false }
ordered-float = "5.1.0"
probability = "0.20.3"
memoize = "0.6.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
